<resources>
    <string name="app_name">BuildUiKt</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello I am the first fragment</string>
    <string name="hello_second_fragment">Hello I am the second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello World!</string>
    <string name="greetings">Hola World</string>
    <string name="title_activity_relative_l">RelativeLActivity</string>
    <string name="fl3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <!--  Game  -->
    <string name="batsman">Batsman</string>
    <string name="wicketk">Wicket-keeper</string>
    <string name="bowler">Bowler</string>
    <string name="allround">All-rounder</string>
    <!-- Team   -->
    <string name="rcb">Royal Challengers Bangalore(RCB)</string>
    <string name="mi">Mumbai Indians(MI)</string>
    <!--  Players  -->
    <string name="virat">Virat Kohli</string>
    <string name="ab_de_villers">AB de Villers</string>
    <string name="devd">Devdutt Padikkal</string>
    <string name="tim">Tim David</string>
    <string name="maxwell">Glenn Maxwell</string>
    <string name="wanindu">Wanindu Hasaranga</string>
    <string name="josh">Josh Philippe</string>
    <string name="kyle">Kyle Jamieson</string>
    <string name="harshal">Harshal Patel</string>
    <string name="george">George Garton</string>
    <string name="sundar">Washington Sundar</string>
    <string name="scott">Scott Kuggeleijn</string>
    <string name="siraj">Mohammed Siraj</string>
    <string name="yuj">Yuzvendra Chahal</string>
    <string name="zampa">Adam Zampa</string>
    <string name="finn">Finn Allen</string>
    <string name="rohit">Rohit Sharma</string>
    <string name="hardik">Hardik Pandya</string>
    <string name="arjun">Arjun Tendulkar</string>
    <string name="boult">Trent Boult</string>
    <string name="bumrah">Jaspreet Bumrah</string>
    <string name="ishan">Ishan Kishan</string>
    <string name="krunal">Krunal Pandya</string>
    <string name="pollard">Kieron Pollard</string>
    <string name="quinton">Quinton de Kock</string>
    <string name="rahul">Rahul Chahar</string>
    <string name="saurabh">Saurabh Tiwary</string>
    <string name="adam">Adam Milne</string>
    <string name="suryakumar">Suryakumar Yadav</string>

    <!--    Action Buttons -->
    <string name="all_mi">Mumbai Indians</string>
    <string name="all_rcb">RCB</string>
    <string name="all">All</string>
    <string name="any">any</string>
    <string name="recycler_view">RecyclerView</string>
    <string name="lflayout">Linear and Frame Layout</string>
    <string name="clayout">Constraint Layout</string>
    <string name="colayout">Coordinator Layout</string>
    <string name="exp_rv">Expandable Recycler View</string>
    <string name="vp">ViewPager</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>