<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewholder_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:orientation="vertical"
    android:padding="@dimen/inner_frame_layout_padding"
    tools:background="@color/lialac_200">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_profile_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:src="@drawable/ab" />

    <TextView
        android:id="@+id/tv_player_name"
        style="@style/appTextStyleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        tools:text="@string/ab_de_villers" />

    <TextView
        android:id="@+id/tv_player_specialization"
        style="@style/appTextStyleNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        tools:text="@string/batsman" />

    <TextView
        android:id="@+id/tv_player_team"
        style="@style/appTextStyleNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:maxEms="8"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/rcb" />


</LinearLayout>