<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LauncherActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_bright"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g_part_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_rv"
                style="@style/cardViewProperties"
                app:layout_constraintEnd_toStartOf="@id/g_part_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_rv"
                    style="@style/appTextStyleTitleLauncherActivity"
                    android:text="@string/recycler_view" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_exp_rv"
                style="@style/cardViewProperties"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/g_part_vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_exp_rv"
                    style="@style/appTextStyleTitleLauncherActivity"
                    android:text="@string/exp_rv" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_coordinator"
                style="@style/cardViewProperties"
                app:layout_constraintEnd_toStartOf="@id/g_part_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_rv">

                <TextView
                    android:id="@+id/tv_coordinator"
                    style="@style/appTextStyleTitleLauncherActivity"
                    android:text="@string/colayout" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_constraint"
                style="@style/cardViewProperties"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/g_part_vertical"
                app:layout_constraintTop_toBottomOf="@id/cv_exp_rv">

                <TextView
                    android:id="@+id/tv_constraint"
                    style="@style/appTextStyleTitleLauncherActivity"
                    android:text="@string/clayout" />

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>